<resources>
    <string name="app_name">Perfect Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!--<string name="subject">Subject:</string>-->
    <!--<string name="description">Description:</string>-->
    <!--<string name="add">Add</string>-->
    <!--<string name="add_note">ADD NOTE:</string>-->
    <!--<string name="edit_note">Edit Note</string>-->
    <!--<string name="save">Save</string>-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">Subject:</string>
    <string name="description">Description:</string>
    <string name="add">Add</string>
    <string name="add_note">ADD NOTE:</string>
    <string name="edit_note">Edit Note</string>
    <string name="save">Save</string>
    <string name="sample_text">sample text</string>
    <string name="sample_date">dd/mm/yyyy</string>
    <string name="sample_time">hh:mm</string>
    <string name="add_reminder">ADD REMINDER</string>
    <string name="label">Label</string>
    <string name="cancel">cancel</string>
</resources>
