<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminderDialogLayout"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderDialogHeading"
        android:text="@string/add_reminder"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/reminderDialogLabel"
            android:hint="@string/label"
            android:inputType="textMultiLine"
            android:maxLines="2"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/alertDialogTimeLayout"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="#000"
            android:src="@android:drawable/ic_lock_idle_alarm"
            />

        <TextView
            android:id="@+id/alertDialogTimeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sample_time" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/alertDialogDateLayout"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="#000"
            android:src="@android:drawable/ic_menu_my_calendar"
            />

        <TextView
            android:id="@+id/alertDialogDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/sample_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminderDialogAddButton"
            android:text="@string/add"
            android:theme="@style/AppTheme.Button"
            android:enabled="false"
            />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminderDialogCancelButton"
            android:text="@string/cancel"
            android:theme="@style/AppTheme.Button"
            />

    </LinearLayout>


</LinearLayout>