<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addHeadingCustonDialog"
        android:text="@string/add_note"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="#000"
        />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/subjectETCustonDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:inputType="text|textMultiLine"
            android:maxLines="2"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="20dp"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text|textMultiLine"
            android:lines="2"
            android:maxLines="2"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonContainer"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        >
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButtonCustomDialog"
            android:text="@string/add"
            android:enabled="false"
            android:theme="@style/AppTheme.Button"

            />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButtonCustomDialog"
            android:text="Cancel"
            android:layout_marginStart="10dp"
            android:theme="@style/AppTheme.Button"
            />

    </LinearLayout>

</LinearLayout>