<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    android:id="@+id/reminderCardLayout"
    >

    <LinearLayout
        android:id="@+id/reminderCardLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reminderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sample_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/calendar_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    />

                <TextView
                    android:id="@+id/calendar_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:layout_toEndOf="@+id/calendar_image"
                    android:text="@string/sample_date"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                >

                <ImageView
                    android:id="@+id/time_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@android:drawable/ic_lock_idle_alarm" />
                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/time_image"
                    android:layout_centerVertical="true"
                    android:text="@string/sample_time"
                    android:layout_marginStart="5dp"
                    />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>